ispravil ope4atky

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -63,7 +63,7 @@
           <th class = "conth">
           <h2 class = "contact-header"> Founder</h2>
           <p class = "condata"><img class = "con-info" alt = "founder" src ="../static/images/founder.jpg"/></br>
-          Name: Tonny Stark </br>
+          Name: Tony Stark </br>
             Skype: ironman14 </br>
             Email: iam@ironman.ru </br>
             Phone: 233 - 65 - 29 </br>
