--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
 	<div>
       <div class="jumbotron">
 		    <div class="container">
-				  <h1 class="pybursa_project">PyBursa Project</h1>
-		    	<h3 class="description2">Description</h3>
+				  <h3>PyBursa Project</h3>
+		    	<h2 class="description2">Description</h2>
 		    	<p class="first-p">	
 		    			В этом курсе мы сместили акцент в сторону практики.
 						Будет умеренное количество теории - максимум практики.
