--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav">
           <li><a href="index.html">Main</a></li>
           <li><a href="contact.html">Contacts</a></li>
-          <li><a href="contact.html">Students</a></li>
+          <li><a href="student_list.html.html">Students</a></li>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -25,9 +25,35 @@
   </nav>
   <div class="jumbotron">
     <div class="container">
-      <h3>Stas Mykhailov</h3>
+      <h3>Mykhailov Stanislav</h3>
     </div>
   </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Почта</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Иван</td>
+        <td>Николайчук</td>
+        <td>ivan@example.com</td>
+      </tr>
+      <tr>
+        <td>Мария</td>
+        <td>Иванова</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>Юлия</td>
+        <td>Петренко</td>
+        <td>julia@example.com</td>
+      </tr>
+    </tbody>
+  </table>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
   </body>
