--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav">
           <li><a href="index.html">Main</a></li>
           <li><a href="contact.html">Contacts</a></li>
-          <li class="active"><a href="contact.html">Students</a></li>
+          <li class="active"><a href="student_list.html.html">Students</a></li>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -29,6 +29,54 @@
 
     </div>
   </div>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>No</th>
+        <th>Surname</th>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Skype</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="student_detail.html">1</a></td>
+        <td>Mykhailov</td>
+        <td>Stanislav</td>
+        <td>Kharkiv, Traktorostroiteley 103-A</td>
+        <td>stas_mykhailov</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Terentiev</td>
+        <td>Denys</td>
+        <td>New York, NY 10016</td>
+        <td>i_h.a.t.e</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Vader</td>
+        <td>Darth</td>
+        <td>Death Star</td>
+        <td>darth_vader</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Amidala</td>
+        <td>Padmé</td>
+        <td>Naboo</td>
+        <td>hate_darth</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>Skywalker</td>
+        <td>Luke</td>
+        <td>Tatooine</td>
+        <td>wanna_kill_dad</td>
+      </tr>
+    </tbody>
+  </table>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
   </body>
