--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav">
           <li><a href="index.html">Main</a></li>
           <li><a href="contact.html">Contacts</a></li>
-          <li class="active"><a href="student_list.html.html">Students</a></li>
+          <li class="active"><a href="student_list.html">Students</a></li>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
