--- a/templates/index.html
+++ b/templates/index.html
@@ -33,13 +33,18 @@
         </nav>
       </div>
     </div>
+
 	<div>
       <div class="jumbotron">
-		    <div class="container">
-				  <h3>PyBursa Project</h3>
-		    	<h2 class="description2">Description</h2>
-		    	<p class="first-p">	
-		    			В этом курсе мы сместили акцент в сторону практики.
+    <div class="container">
+      <div class="page-header">
+        <h1>PyBursa Python!</h1>
+      </div>          
+      <h3>Посмотри, что мы предлагаем</h3>     
+      <h2 class="description2">Our Description</h2>
+  </div>  
+        </div>
+		    	<p class="first-p">В этом курсе мы сместили акцент в сторону практики.
 						Будет умеренное количество теории - максимум практики.
 						Примерное соотношение теории и практики: 30% на 70%
 						Курсы будут проходить с 19 октября по 28 декабря.
