--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            	<h2>PyBursa</h2>
+            	<h2>Список стедетов курса PyBursa</h2>
 
                 <table class="table table-striped table-hover list_student">
                     <thead>
@@ -60,35 +60,35 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><a href="student_detail.html">1</a></td>
+                            <td><a href="student_detail.html#govorov">1</a></td>
                             <td>Говоров</td>
                             <td>Игорь</td>
                             <td>Украина, г.Харьков, пер.Чернышевского,д.15,кв.3</td>
                             <td>govorov</td>
                         </tr>
                         <tr>
-                            <td>2</td>
+                            <td><a href="student_detail.html#sinelnikov">2</a></td>
                             <td>Синельников</td>
                             <td>Владимир</td>
                             <td>Украина, г.Харьков, ул.Танкопия,д.24,кв.3</td>
                             <td>sinelnik</td>
                         </tr>
                         <tr>
-                            <td>3</td>
+                            <td><a href="student_detail.html#sheva">3</a></td>
                             <td>Шевченко</td>
                             <td>Вячеслав</td>
                             <td>Украина, г.Харьков, пер.Маломясницкий,д.10,кв.3</td>
                             <td>sheva</td>
                         </tr>
                         <tr>
-                            <td>4</td>
+                            <td><a href="student_detail.html#karnauch">4</a></td>
                             <td>Карнаух</td>
                             <td>Екатерина</td>
                             <td>Украина, г.Харьков, ул.Космическая,д.87,кв.3</td>
                             <td>karnauch</td>
                         </tr>
                         <tr>
-                            <td>5</td>
+                            <td><a href="student_detail.html#gahov">5</a></td>
                             <td>Гахов</td>
                             <td>Станислав</td>
                             <td>Украина, г.Харьков, пер.Петровского,д.2,кв.3</td>
