--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,21 +11,11 @@
 
     <title>Contacts page</title>
 
-    <!-- Bootstrap core CSS -->
+    <title>Main page</title>
+
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!-- <script src="../static/js/ie-emulation-modes-warning.js"></script>-->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -65,7 +55,7 @@
             <li>Address: Kharkiv, home</li>
           </ul>
 
-          <h4>Founder</h4>
+          <h4 class="mark">Founder</h4>
           <ul>
             <li>Name: Pavel Obod</li>
             <li>Skype: azaless</li>
