--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -36,7 +36,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">Main</a></li>
                     <li><a href="contact.html">Contacts</a></li>
-                    <li><a href="students.html">Students</a></li>
+                    <li><a href="student_list.html">Students</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
