--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div id="govorov" class="well student_detail">
-                    <h2><b>Говоров Игорь</b></h2>
+                    <h2>Говоров Игорь</h2>
                     <img src="../static/images/face.jpg" alt="img">
                     <h3>Student Card</h3>
                     
@@ -145,400 +145,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div id="sinelnikov" class="well student_detail">
-                    <h2><b>Синельников Владимир</b></h2>
-                    <img src="../static/images/face.jpg" alt="img">
-                    <h3>Student Card</h3>
-                    
-                    <table class="table table-striped table-hover">
-                        <tbody>
-                            <tr>
-                                <td>PyBursa</td>
-                                <td>Синельников</td>
-                            </tr>
-                            <tr>
-                                <td>Name</td>
-                                <td>Владимир</td>
-                            </tr>
-                            <tr>
-                                <td>Patronymic</td>
-                                <td>Игоревич</td>
-                            </tr>
-                            <tr>
-                                <td>Rating</td>
-                                <td>18</td>
-                            </tr>
-                            <tr>
-                                <td>Average Grade</td>
-                                <td>95</td>
-                            </tr>
-                            <tr>
-                                <td>Package</td>
-                                <td>Standard</td>
-                            </tr>
-                            <tr>
-                                <td>Birth Date</td>
-                                <td>01/03/1988</td>
-                            </tr>
-                            <tr>
-                                <td>Address</td>
-                                <td>Украина, г.Харьков, ул.Танкопия,д.24,кв.3</td>
-                            </tr>
-                            <tr>
-                                <td>Post</td>
-                                <td>61100</td>
-                            </tr>
-                            <tr>
-                                <td>Skype</td>
-                                <td>sinelnik</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <h3>Perfomance</h3>
-                    <table class="table table-hover perfomance">
-                        <thead>
-                            <th>Course</th>
-                            <th>Week</th>
-                            <th>Control Type</th>
-                            <th>Grade</th>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>PyBursa</td>
-                                <td>Week1</td>
-                                <td>Tests</td>
-                                <td>98%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №1</td>
-                                <td>95%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №2</td>
-                                <td>93%</td>
-                            </tr>
-
-                            <tr>
-                                <td></td>
-                                <td>Week2</td>
-                                <td>Tests</td>
-                                <td>99%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №1</td>
-                                <td>90%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №2</td>
-                                <td>94%</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div id="sheva" class="well student_detail">
-                    <h2><b>Шевченко Вячеслав</b></h2>
-                    <img src="../static/images/face.jpg" alt="img">
-                    <h3>Student Card</h3>
-                    
-                    <table class="table table-striped table-hover">
-                        <tbody>
-                            <tr>
-                                <td>PyBursa</td>
-                                <td>Шевченко</td>
-                            </tr>
-                            <tr>
-                                <td>Name</td>
-                                <td>Вячеслав</td>
-                            </tr>
-                            <tr>
-                                <td>Patronymic</td>
-                                <td>Владимирович</td>
-                            </tr>
-                            <tr>
-                                <td>Rating</td>
-                                <td>15</td>
-                            </tr>
-                            <tr>
-                                <td>Average Grade</td>
-                                <td>100</td>
-                            </tr>
-                            <tr>
-                                <td>Package</td>
-                                <td>Standard</td>
-                            </tr>
-                            <tr>
-                                <td>Birth Date</td>
-                                <td>11/02/1988</td>
-                            </tr>
-                            <tr>
-                                <td>Address</td>
-                                <td>Украина, г.Харьков, пер.Маломясницкий,д.10,кв.3</td>
-                            </tr>
-                            <tr>
-                                <td>Post</td>
-                                <td>61100</td>
-                            </tr>
-                            <tr>
-                                <td>Skype</td>
-                                <td>sheva</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <h3>Perfomance</h3>
-                    <table class="table table-hover perfomance">
-                        <thead>
-                            <th>Course</th>
-                            <th>Week</th>
-                            <th>Control Type</th>
-                            <th>Grade</th>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>PyBursa</td>
-                                <td>Week1</td>
-                                <td>Tests</td>
-                                <td>99%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №1</td>
-                                <td>100%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №2</td>
-                                <td>100%</td>
-                            </tr>
-
-                            <tr>
-                                <td></td>
-                                <td>Week2</td>
-                                <td>Tests</td>
-                                <td>100%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №1</td>
-                                <td>100%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №2</td>
-                                <td>100%</td>
-                            </tr>
-                           
-                        </tbody>
-                    </table>
-                </div>
-                <div id="karnauch" class="well student_detail">
-                    <h2><b>Карнаух Екатерина</b></h2>
-                    <img src="../static/images/face.jpg" alt="img">
-                    <h3>Student Card</h3>
-                    
-                    <table class="table table-striped table-hover">
-                        <tbody>
-                            <tr>
-                                <td>PyBursa</td>
-                                <td>Карнаух</td>
-                            </tr>
-                            <tr>
-                                <td>Name</td>
-                                <td>Екатерина</td>
-                            </tr>
-                            <tr>
-                                <td>Patronymic</td>
-                                <td>Игоревна</td>
-                            </tr>
-                            <tr>
-                                <td>Rating</td>
-                                <td>18</td>
-                            </tr>
-                            <tr>
-                                <td>Average Grade</td>
-                                <td>95</td>
-                            </tr>
-                            <tr>
-                                <td>Package</td>
-                                <td>Standard</td>
-                            </tr>
-                            <tr>
-                                <td>Birth Date</td>
-                                <td>01/11/1988</td>
-                            </tr>
-                            <tr>
-                                <td>Address</td>
-                                <td>Украина, г.Харьков, ул.Космическая,д.87,кв.3</td>
-                            </tr>
-                            <tr>
-                                <td>Post</td>
-                                <td>61100</td>
-                            </tr>
-                            <tr>
-                                <td>Skype</td>
-                                <td>karnauch</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <h3>Perfomance</h3>
-                    <table class="table table-hover perfomance">
-                        <thead>
-                            <th>Course</th>
-                            <th>Week</th>
-                            <th>Control Type</th>
-                            <th>Grade</th>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>PyBursa</td>
-                                <td>Week1</td>
-                                <td>Tests</td>
-                                <td>99%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №1</td>
-                                <td>91%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №2</td>
-                                <td>95%</td>
-                            </tr>
-
-                            <tr>
-                                <td></td>
-                                <td>Week2</td>
-                                <td>Tests</td>
-                                <td>99%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №1</td>
-                                <td>90%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №2</td>
-                                <td>94%</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div id="gahov" class="well student_detail">
-                    <h2><b>Гахов Станислав</b></h2>
-                    <img src="../static/images/face.jpg" alt="img">
-                    <h3>Student Card</h3>
-                    
-                    <table class="table table-striped table-hover">
-                        <tbody>
-                            <tr>
-                                <td>PyBursa</td>
-                                <td>Говоров</td>
-                            </tr>
-                            <tr>
-                                <td>Name</td>
-                                <td>Станислав</td>
-                            </tr>
-                            <tr>
-                                <td>Patronymic</td>
-                                <td>Владимирович</td>
-                            </tr>
-                            <tr>
-                                <td>Rating</td>
-                                <td>20</td>
-                            </tr>
-                            <tr>
-                                <td>Average Grade</td>
-                                <td>99.9</td>
-                            </tr>
-                            <tr>
-                                <td>Package</td>
-                                <td>Standard</td>
-                            </tr>
-                            <tr>
-                                <td>Birth Date</td>
-                                <td>11/05/1988</td>
-                            </tr>
-                            <tr>
-                                <td>Address</td>
-                                <td>Украина, г.Харьков, пер.Петровского,д.2,кв.3</td>
-                            </tr>
-                            <tr>
-                                <td>Post</td>
-                                <td>61100</td>
-                            </tr>
-                            <tr>
-                                <td>Skype</td>
-                                <td>gahov</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <h3>Perfomance</h3>
-                    <table class="table table-hover perfomance">
-                        <thead>
-                            <th>Course</th>
-                            <th>Week</th>
-                            <th>Control Type</th>
-                            <th>Grade</th>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>PyBursa</td>
-                                <td>Week1</td>
-                                <td>Tests</td>
-                                <td>99%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №1</td>
-                                <td>98%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №2</td>
-                                <td>100%</td>
-                            </tr>
-
-                            <tr>
-                                <td></td>
-                                <td>Week2</td>
-                                <td>Tests</td>
-                                <td>100%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №1</td>
-                                <td>99%</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td>Problem Tasks №2</td>
-                                <td>95%</td>
-                            </tr>
-                           
-                        </tbody>
-                    </table>
-                </div>
+                
             </div>
         </div>
     </div>
