added new styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,9 @@
 
 	<div>
       <div class="jumbotron">
-    <div class="container">
-        <h1>PyBursa Python!</h1>
-      <h3>Посмотри, что мы предлагаем</h3>     
-      <h2 class="description2">Our Description</h2>
+        <div class="container">
+        <h1>Python! PyBursa</h1>
+        <h2>Our Description</h2>
 
 		    	<p class="first-p">В этом курсе мы сместили акцент в сторону практики.
 						Будет умеренное количество теории - максимум практики.
