--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -54,7 +54,7 @@
                     <table class="table table-striped table-hover">
                         <tbody>
                             <tr>
-                                <td>PyBursa</td>
+                                <td>Surname</td>
                                 <td>Говоров</td>
                             </tr>
                             <tr>
@@ -86,8 +86,8 @@
                                 <td>Украина, г.Харьков, пер.Чернышевского,д.15,кв.3</td>
                             </tr>
                             <tr>
-                                <td>Post</td>
-                                <td>61100</td>
+                                <td>E-mail</td>
+                                <td>example@gmail.com</td>
                             </tr>
                             <tr>
                                 <td>Skype</td>
