--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
 	<div>
       <div class="jumbotron">
         <div class="container">
-        <h1>Python! PyBursa</h1>
-        <h2>Our Description</h2>
+        <h1>PyBursa</h1>
+        <h1>Description</h1>
 
 		    	<p class="first-p">В этом курсе мы сместили акцент в сторону практики.
 						Будет умеренное количество теории - максимум практики.
