add bootstrap tags

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
     </div>
     <div class="jumbotron">
         <h1 class="center">Welcome to PyBursa</h1>
+        <h2 class="center">Description</h2>
+        <p class="center"> It is a very powerful and good courses </p>
         <p class="center">If you want to know all about Python - ask our expert!</p>
         <p class="center"><a class="btn btn-primary btn-lg" href="contact.html" role="button">Ask </a></p>
     </div>
@@ -24,8 +26,7 @@
         <h1 class="center"> <span class="label label-info">We are glad to see you on our site</span> </h1>
         <p  class="center"> You can learn <span class="green-text">Python</span> with us</p>
 
-        <h2 class="center">Description</h2>
-        <p class="center"> It is a very powerfull and good courses </p>
+
 
         <h2 class="center">Program</h2>
         <p class="center">Tell us about you favourite language and we'll tell about you )</p>
@@ -33,6 +34,19 @@
         <div class="alert alert-info center" role="alert">We can make you better</div>
         <p class="right"><span class="label label-primary">Join Us!</span></p>
 
+        <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">Python is</h2>
+        </div>
+        <div class="panel-body">
+             <ul class="list-group">
+                 <li class="list-group-item list-group-item-info">Cool</li>
+                 <li class="list-group-item list-group-item-warning">Easy</li>
+                 <li class="list-group-item list-group-item-success">Powerful</li>
+                 <li class="list-group-item list-group-item-danger">Enteresting</li>
+             </ul>
+        </div>
+    </div>
     </div>
 </body>
 </html>
