--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -51,10 +51,10 @@
                 <table class="table table-striped table-hover list_student">
                     <thead>
                         <tr>
-                            <th>№</th>
+                            <th>No</th>
                             <th>Surname</th>
                             <th>Name</th>
-                            <th>Adress</th>
+                            <th>Address</th>
                             <th>Skype</th>
                         </tr>
                     </thead>
