--- a/templates/index.html
+++ b/templates/index.html
@@ -29,14 +29,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">ITBursa</a>
+      <a class="navbar-brand" href="index.html">ITBursa-2015</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="contacts.html">Contacts<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -47,7 +47,7 @@
   <h1>Description</h1>
   <h2>Program</h2>
   <p>Enroll in the latest online IT courses covering important topics in software engineering.</p>
-  <p><a class="btn btn-primary btn-lg" href="contacts.html" role="button">Learn more</a></p>
+  <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Learn more</a></p>
   </div>
 </div>
 <div class="jumbotron">
@@ -56,12 +56,6 @@
     <p>Courses can be taken in any order. If current dates are unavailable, please check back often as they are always being added.</p> 
   </div>
 </div>
-<a href="contact.html" rel="#overlay"> 
-  <button type="button">Message</button> </a> 
-  <div class="overlay" id="overlay"> 
-    <div class="wrap">
-    </div> 
-  </div> 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
