--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Georgia, "Times New Roman",
         Times, serif;
    color : purple;
-   background-color : # B0E0E6  }
+   background-color : white  }
 ul.navbar {
   list-style-type: none;
   padding: 0;
