--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,26 +1,91 @@
-<h1 class='contact-title'>Message:</h1>
-<form action="send.php" method="post">
-<table>
-<tbody><tr>
-<th class="lable">*Name:</th>
-<td class="input"><input name="name" size="40" maxlength="40" class="input" type="text"></td>
-</tr>
-<tr>
-<th class="lable">*Mail:</th>
-<td class="input"><input name="email" size="40" maxlength="40" class="input" type="text"></td>
-</tr>
-<tr>
-<th class="lable">Topic:</th>
-<td class="input"><input name="subject" size="40" maxlength="40" class="input" type="text"></td>
-</tr>
-<tr>
-<th class="lable">*Message:</th>
-<td class="input"><textarea name="text_message" cols="40" rows="10" class="input"></textarea></td>
-</tr> 
-<br><br> 
-<tr><th></th>
-<td align="center">
-<input name="mail_submit" type="submit" value="Send">     </td>
-</tr>
-</tbody></table>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Contacts</title>
+    <link rel="stylesheet" href="../static/css/style.css">
+
+    <!-- Bootstrap -->
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="index.html">ITBursa-2015</a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li><a href="index.html">Main</a></li>
+	        <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+	        </li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>	
+	<div class="row">
+	  <div class="col-sm-6 col-md-4">
+	    <div class="thumbnail">
+	      <img src="../static/images/pic2.jpg" width="100px" height="100px">
+	      <div class="caption">
+	        <h3>Director</h3>
+	        <p>Name: Ivan Petrov</p>
+	        <p>Skype: ivan123</p> 
+	        <p>Phone: (123) 456-7892</p>
+	        <a href="mailto:#">123@gmail.com</a>
+	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<div class="row">
+	  <div class="col-sm-6 col-md-4">
+	    <div class="thumbnail">
+	      <img src="../static/images/pic1.jpg" width="100px" height="100px">
+	      <div class="caption">
+	        <h3> Manager</h3>
+	        <p>Name: Alex Ivanov</p>
+	        <p>Skype: Alex12</p> 
+	        <p>Phone: (123) 456-7891</p>
+	        <a href="mailto:#">AlexIvanov@gmail.com</a>
+	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<div class="row">
+	  <div class="col-sm-6 col-md-4">
+	    <div class="thumbnail">
+	      <img src="../static/images/pic3.jpg" width="100px" height="100px">
+	      <div class="caption">
+	        <h3>Founder</h3>
+	        <p>Name: Daria Bondarenko</p>
+	        <p>Skype: daria</p> 
+	        <p>Phone: (123) 456-7890</p>
+	        <a href="mailto:#">daria123@gmail.com</a>
+	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
+	      </div>
+	    </div>
+	  </div>
+	</div>
+  </body>
+</html>  	
