--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            	<h2>Список курса PyBursa</h2>
+            	<h2>PyBursa</h2>
 
                 <table class="table table-striped table-hover list_student">
                     <thead>
