--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main Page</title>
+    <title>Student Page</title>
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            	<h2>PyBursa</h2>
+            	<h2>Список курса PyBursa</h2>
 
                 <table class="table table-striped table-hover list_student">
                     <thead>
