--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -28,32 +28,90 @@
       <h3>Mykhailov Stanislav</h3>
     </div>
   </div>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Имя</th>
-        <th>Фамилия</th>
-        <th>Почта</th>
-      </tr>
-    </thead>
+  <table class="table table-condensed"">
     <tbody>
       <tr>
-        <td>Иван</td>
-        <td>Николайчук</td>
-        <td>ivan@example.com</td>
+        <td>Surname</td>
+        <td>Mykhailov</td>
       </tr>
       <tr>
-        <td>Мария</td>
-        <td>Иванова</td>
-        <td>mary@example.com</td>
+        <td>Name</td>
+        <td>Stanislav</td>
       </tr>
       <tr>
-        <td>Юлия</td>
-        <td>Петренко</td>
-        <td>julia@example.com</td>
+        <td>Patronymic</td>
+        <td>Maksimovych</td>
       </tr>
+      <tr>
+        <td>Rating</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>Average Grade</td>
+        <td>95.6</td>
+      </tr>
+      <tr>
+        <td>Birth Date</td>
+        <td>25.07.1988</td>
+      </tr>
+      <tr>
+        <td>Address</td>
+        <td>Kharkiv, Traktorostroiteley 103-A</td>
+      </tr>
+      <tr>
+        <td>E-mail</td>
+        <td>s.m.mykhailov@gmail.com</td>
+      </tr>
+      <tr>
+        <td>Skype</td>
+        <td>stas_mykhailov</td>
+      </tr>
+
     </tbody>
   </table>
+  <div class="table-responsive">
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <td></td>
+          <th>Tests</th>
+          <th>Problem Task 1</th>
+          <th>Problem Task 2</th>
+          <th>Average</th>
+         
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Week1</th>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success">100</td>
+          
+        </tr>
+        <tr>
+          <th scope="row">Week2</th>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success">95.6</td>
+        <tr>
+          <th scope="row">Week3</th>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success">91.2</td>
+        </tr>
+        <tr>
+          <th scope="row">Week4</th>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Done</td>
+          <td class="text-success">97.8</td>
+      </tbody>
+    </table>
+  </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
   </body>
