--- a/templates/contact.html
+++ b/templates/contact.html
@@ -69,6 +69,7 @@
       </div><!-- /.col-lg-4 -->
     </div>
   </div>
+  </div>
   <div class="alert alert-warning" role="alert">Поторопись!</div><!-- /.row -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
