--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -77,7 +77,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="well well-lg">Всего студентов на курсе: 46</div>
+  <div class="well well-lg">Всего студентов в текущем курсе: 46</div>
   <div class="alert alert-info">Будь среди лучших!</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
