--- a/templates/index.html
+++ b/templates/index.html
@@ -25,27 +25,12 @@
     <div class="page-header">
         <h1 class="center"> <span class="label label-info">We are glad to see you on our site</span> </h1>
         <p  class="center"> You can learn <span class="green-text">Python</span> with us</p>
-    </div>
-
         <h2 class="center">Program</h2>
-        <p class="center">Tell us about you favourite language and we'll tell about you )</p>
+        <p class="center">Tell us about you favourite language and we'll tell about you...</p>
 
         <div class="alert alert-info center" role="alert">We can make you better</div>
         <p class="right"><span class="label label-primary">Join Us!</span></p>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h2 class="panel-title">Python is</h2>
-            </div>
-            <div class="panel-body">
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-info">Cool</li>
-                    <li class="list-group-item list-group-item-warning">Easy</li>
-                    <li class="list-group-item list-group-item-success">Powerful</li>
-                    <li class="list-group-item list-group-item-danger">Enteresting</li>
-                </ul>
-            </div>
-        </div>
+    </div>
 
 </body>
 </html>
