--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -28,7 +28,14 @@
       <h3>Mykhailov Stanislav</h3>
     </div>
   </div>
-  <table class="table table-condensed"">
+  
+
+  <table class="table table-condensed">
+    <thead>
+      <tr>
+        <th>Информация о студенте</th>
+      </tr>
+    </thead>
     <tbody>
       <tr>
         <td>Surname</td>
