--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -25,9 +25,13 @@
   </nav>
   <div class="jumbotron">
     <div class="container">
-      <h1>Лучшие студенты PyBursa</h1>
+      <h1>Cтуденты PyBursa текущего набора</h1>
 
     </div>
+  </div>
+  <div class="panel panel-default">
+  <div class="panel-body">
+    Текущий курс: DJ103
   </div>
   <table class="table table-hover">
     <thead>
@@ -77,7 +81,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="well well-lg">Всего студентов в текущем курсе: 46</div>
+  <div class="well well-lg">Всего выпускников в этом году: 46.</div>
   <div class="alert alert-info">Будь среди лучших!</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
