--- a/templates/index.html
+++ b/templates/index.html
@@ -32,5 +32,19 @@
         <p class="right"><span class="label label-primary">Join Us!</span></p>
     </div>
 
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2 class="panel-title">Python is</h2>
+        </div>
+        <div class="panel-body">
+             <ul class="list-group">
+                 <li class="list-group-item list-group-item-info">Powerful</li>
+                 <li class="list-group-item list-group-item-warning">Interesting</li>
+                 <li class="list-group-item list-group-item-success">Easy</li>
+                 <li class="list-group-item list-group-item-danger">Simply the best</li>
+             </ul>
+        </div>
+    </div>
+
 </body>
 </html>
