Rename site on contacts page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
+              <h3 class="masthead-brand">PyBursa</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="index.html"> Main </a></li>
