--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,12 +32,12 @@
     <div class="container">
       
       <h1 id="team1">Познакомся с нашей командой!</h1>
-      <h3 id="team2">Именно они будут твоими проводниками в IT</h3>
-    
       
+    </div>
+  </div>    
   <div class="container marketing">
 
-      <!-- Three columns of text below the carousel -->
+    <h3 id="team2">Именно они будут твоими проводниками в IT</h3>  <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
         <img class="img-circle" src="../static/images/pavel.jpg" alt="Generic placeholder image" width="140" height="140">
