--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -84,7 +84,7 @@
           <th>Tests</th>
           <th>Problem Task 1</th>
           <th>Problem Task 2</th>
-          <th>Average</th>
+          <th>Grade</th>
          
         </tr>
       </thead>
