--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,6 +22,8 @@
                     </li>
                     <li class="active"><a class="top_bar" href="contact.html">Contacts</a>
                     </li>
+                    <li><a class="top_bar" href="student_list.html">Students</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -72,6 +74,8 @@
     <nav class="container">
         <ul class="pager">
             <li class="previous"><a href="index.html"><span aria-hidden="true">&larr;</span>Main</a>
+            </li>
+            <li class="next"><a href="student_list.html">Students<span aria-hidden="true">&rarr;</span></a>
             </li>
         </ul>
     </nav>
