--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
                     </li>
                     <li><a class="top_bar" href="contact.html">Contacts</a>
                     </li>
+                    <li><a class="top_bar" href="student_list.html">Students</a>
+                    </li>
                 </ul>
             </div>
         </div>
