--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>Contacts</title>
+    <title>Students</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -48,77 +48,75 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li  class="active"><a href="student_list.html">Students</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
     <div class="container theme-showcase" role="main">
-
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Director</h3>
-            </div>
-            <div class="panel-body">
-                <br><strong>Name:</strong> Daria Mykhalevych
-                <br><strong>Email:</strong> daria.mykhalevych@gmail.com
-                <br><strong>Skype:</strong> darka.darka.darka.darka
-                <br><strong>Phone:</strong> +38 096 469 15 57
-              </div>
-              <div class="panel-body">
-                <img class="face" src="../static/images/darka.jpg"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
-              </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Manager</h3>
-            </div>
-            <div class="panel-body">
-              <br><strong>Name:</strong> Alyona Chaika
-              <br><strong>Email:</strong> alena.itbursa@gmail.com
-              <br><strong>Skype:</strong> alena.itbursa
-              <br><strong>Phone:</strong> +38 063 625 07 55
-            </div> 
-              <div class="panel-body">
-                <img class="face" src="../static/images/alena.jpg"  alt="Alyona Chaika" style="width:90px;height:120px;">
-              </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Founder</h3>
-            </div>
-            <div class="panel-body">
-              <br><strong>Name:</strong> Pavel Obod
-              <br><strong>Email:</strong> itbursa100@gmail.com
-              <br><strong>Skype:</strong> azaless
-              <br><strong>Phone:</strong> +38 096 469 15 56
-            </div>
-            <div class="panel-body">
-                <img class="face"  src="../static/images/pasha.jpg"  alt="Pavel Obod" style="width:90px;height:120px;" align="center" >
-              </div>
-          </div>
-        </div>
-          
+        <h1 class="course">Students of PyBursa</h1>
+        <div class="bs-example" data-example-id="simple-table">
+          <table class="table table-striped table table-bordered">
+            <caption>Graduation year - 2015.</caption>
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>Surname</th>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Skype</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row"><a class="table" href="student_detail.html">1</a></th>
+                <td>Persianova</td>
+                <td>Olena</td>
+                <td>Kyivska Street 55/11, Kharkiv, 63101, Ukrane</td>
+                <td>Olena.Persianova</td>
+              </tr>
+              <tr>
+                <th scope="row"><a class="table" href="#">2</a></th>
+                <td>Thornton</td>
+                <td>Jacob</td>
+                <td>Kyivska Street 55/22, Lviv, 63101, Ukrane</td>
+                <td>Jacob.Thornton</td>
+              </tr>
+              <tr>
+                <th scope="row"><a class="table" href="#">3</a></th>
+                <td>King</td>
+                <td>Larry</td>
+                <td>Shevchenka Street 55/22, Kyiv, 63101, Ukrane</td>
+                <td>Larry.King</td>
+              </tr>
+              <tr>
+                <th scope="row"><a class="table" href="#">4</a></th>
+                <td>Edison</td>
+                <td>Thomas</td>
+                <td>Shevchenka Street 55/22, Zaporizhia, 63101, Ukrane</td>
+                <td>Thomas.Edison</td>
+              </tr>
+              <tr>
+                <th scope="row"><a class="table" href="#">5</a></th>
+                <td>Truman</td>
+                <td>Harry</td>
+                <td>Shevchenka Street 55/22, Odessa, 63101, Ukrane</td>
+                <td>Harry.Truman</td>
+              </tr>
+            </tbody>
+          </table>
+        </div><!-- /example -->
       </div>
       
-    </div>
-    <!-- Site footer -->
-    <footer class="footer">
-      <p>&copy; PyBursa 2015</p>
-    </footer>
+      <!-- Site footer -->
+      <footer class="footer">
+        <p>&copy; PyBursa 2015</p>
+      </footer>
+      
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
