--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>Contacts</title>
+    <title>Students</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -48,77 +48,99 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li  class="active"><a href="student_list.html">Students</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
     <div class="container theme-showcase" role="main">
-
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Director</h3>
-            </div>
-            <div class="panel-body">
-                <br><strong>Name:</strong> Daria Mykhalevych
-                <br><strong>Email:</strong> daria.mykhalevych@gmail.com
-                <br><strong>Skype:</strong> darka.darka.darka.darka
-                <br><strong>Phone:</strong> +38 096 469 15 57
-              </div>
-              <div class="panel-body">
-                <img class="face" src="../static/images/darka.jpg"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
-              </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Manager</h3>
-            </div>
-            <div class="panel-body">
-              <br><strong>Name:</strong> Alyona Chaika
-              <br><strong>Email:</strong> alena.itbursa@gmail.com
-              <br><strong>Skype:</strong> alena.itbursa
-              <br><strong>Phone:</strong> +38 063 625 07 55
-            </div> 
-              <div class="panel-body">
-                <img class="face" src="../static/images/alena.jpg"  alt="Alyona Chaika" style="width:90px;height:120px;">
-              </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Founder</h3>
-            </div>
-            <div class="panel-body">
-              <br><strong>Name:</strong> Pavel Obod
-              <br><strong>Email:</strong> itbursa100@gmail.com
-              <br><strong>Skype:</strong> azaless
-              <br><strong>Phone:</strong> +38 096 469 15 56
-            </div>
-            <div class="panel-body">
-                <img class="face"  src="../static/images/pasha.jpg"  alt="Pavel Obod" style="width:90px;height:120px;" align="center" >
-              </div>
-          </div>
-        </div>
-          
+        <h1 class="course">Persianova Olena</h1>
+        </p>
+        <div class="bs-example" data-example-id="simple-table">
+          <table class="table table-striped table table-bordered">
+            <caption>Student's card</caption>
+            <tbody>
+              <tr>
+                <td>Surname</td>
+                <td>Persianova</td>
+              </tr>
+              <tr>
+                <td>Name</td>
+                <td>Olena</td>
+              </tr>
+              <tr>
+                <td>Patronymic</td>
+                <td>Yuriivna</td>
+              </tr>
+              <tr>
+                <td>Birth Date</td>
+                <td>11/02/1989</td>
+              </tr>
+              <tr>
+                <td>Address</td>
+                <td>Kyivska Street 55/11, Kharkiv, 63101, Ukrane</td>
+              </tr>
+              <tr>
+                <td>E-mail</td>
+                <td>Olena.Persianova@gmail.com</td>
+              </tr>
+              <tr>
+                <td>Skype</td>
+                <td>Olena.Persianova</td>
+              </tr>
+              <tr>
+                <td>Average</td>
+                <td>99.8</td>
+              </tr>
+              <tr>
+                <td>Rating</td>
+                <td>20</td>
+              </tr>
+              
+            </tbody>
+          </table>
+        </div><!-- /example -->
+        
+        <div class="bs-example" data-example-id="simple-table">
+          <table class="table table-striped table table-bordered">
+            <caption>Graduation year - 2015.</caption>
+            <thead>
+              <tr>
+                <th>Course</th>
+                <th>Week</th>
+                <th>Control Type</th>
+                <th>Grade</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Introduction to Python</th>
+                <td>Week 1</td>
+                <td>Tests <br>Problem Task 1<br>Problem Task 2</td>
+                <td>99%<br>100%<br>100%</td>
+              </tr>
+              <tr>
+                <th scope="row"></a></th>
+                <td>Week 2</td>
+                <td>Tests <br>Problem Task 1<br></td>
+                <td>100%<br>100%</td>
+              </tr>
+            </tbody>
+          </table>
+        </div><!-- /example -->
       </div>
       
-    </div>
-    <!-- Site footer -->
-    <footer class="footer">
-      <p>&copy; PyBursa 2015</p>
-    </footer>
+      
+      
+      <!-- Site footer -->
+      <footer class="footer">
+        <p>&copy; PyBursa 2015</p>
+      </footer>
+      
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
