add bootstrap script

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="../static/js/bootstrap.js"> </script>
     <link rel="stylesheet" href="../static/css/bootstrap.css">
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="script" href="../static/js/bootstrap.js">
+
     <title>Contact</title>
 </head>
 <body>
