--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,28 +39,24 @@
                       <div class="line"></div>
                       <ul class="contact-info">
                           <li>
-                              <i class="fa fa-map-marker"></i>
                               <dl>
                                   <dt>Name</dt>
                                   <dd>Frank Sinatra</dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-envelope"></i>
                                <dl>
                                   <dt>Email</dt>
                                   <dd><a href="">hello@domain.com</a></dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-phone"></i>
                               <dl>
                                   <dt>Phone</dt>
                                   <dd>(900) 987 65 43, (900) 234 56 78</dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-clock-o"></i>
                               <dl>
                                   <dt>Skype</dt>
                                   <dd>franky.sinatra</dd>
@@ -75,28 +71,24 @@
                       <div class="line"></div>
                       <ul class="contact-info">
                           <li>
-                              <i class="fa fa-map-marker"></i>
                               <dl>
                                   <dt>Name</dt>
                                   <dd>Frank Sinatra</dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-envelope"></i>
                                <dl>
                                   <dt>Email</dt>
                                   <dd><a href="">hello@domain.com</a></dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-phone"></i>
                               <dl>
                                   <dt>Phone</dt>
                                   <dd>(900) 987 65 43, (900) 234 56 78</dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-clock-o"></i>
                               <dl>
                                   <dt>Skype</dt>
                                   <dd>franky.sinatra</dd>
@@ -110,28 +102,24 @@
                       <div class="line"></div>
                       <ul class="contact-info">
                           <li>
-                              <i class="fa fa-map-marker"></i>
                               <dl>
                                   <dt>Name</dt>
                                   <dd>Frank Sinatra</dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-envelope"></i>
                                <dl>
                                   <dt>Email</dt>
                                   <dd><a href="">hello@domain.com</a></dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-phone"></i>
                               <dl>
                                   <dt>Phone</dt>
                                   <dd>(900) 987 65 43, (900) 234 56 78</dd>
                               </dl>
                           </li>
                           <li>
-                              <i class="fa fa-clock-o"></i>
                               <dl>
                                   <dt>Skype</dt>
                                   <dd>franky.sinatra</dd>
@@ -154,8 +142,17 @@
       </div>
 
     </div>
+    <div class="jumbotron alert-success">
+        <div class="row">
+            <div class="container">
+                <div class="divider">
+                    <h4>Этот блок существует на средства вырученые от продажи велика</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<!-- start scripts -->
+    <!-- start scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../static/js/bootstrap.min.js"></script>
 <!--/ end scripts -->
