--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
 </head>
-<>
 
+<body>
 <div class="site-wrapper container-img jumbotron">
 
     <div>
