--- a/templates/contact.html
+++ b/templates/contact.html
@@ -131,12 +131,6 @@
               </div>
           </div>
 
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
-
         </div>
 
       </div>
@@ -149,6 +143,13 @@
                     <h4>Этот блок существует на средства вырученые от продажи велика</h4>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="inner">
+            <button class="btn btn-default" type="submit">Нажпи меня</button>
+            <input class="btn btn-default" type="button" value="Жми меня полностью">
+            <input class="btn btn-default" type="submit" value="Перейдем?">
         </div>
     </div>
 
