--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,8 +5,8 @@
 /* Links */
 
 /* FontAwesome */
-@import url("../fonts/font-awesome/css/font-awesome.css");
-@import url("../fonts/font-awesome/css/font-awesome.min.css");
+/*@import url("../fonts/font-awesome/css/font-awesome.css");*/
+/*@import url("../fonts/font-awesome/css/font-awesome.min.css");*/
 
 li {
   list-style: none;
