--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -28,8 +28,8 @@
         </div>
     </nav>
     <div class="container" id="sto">
-  		<h1><strong>Студенты курса PyBursa</strong></h1>
-  			<p><strong>Наши студенты!!!</strong></p>
+  		<h1><strong>Студенты курса <em>PyBursa</em></strong></h1>
+  			<p class="lead"><strong>Наши студенты!!!</strong></p>
 	</div>
                 <table class="table table-hover">
                     <tr>
@@ -49,8 +49,8 @@
                         	Skype
                         </td>
                     </tr>
-                    <tr style="cursor: pointer;" id="logo" onclick="window.location.href='student_detail.html'"></a>
-                        <td >
+                    <tr ></a>
+                        <td style="cursor: pointer;" id="logo" onclick="window.location.href='student_detail.html'">
                             1
                         </td>
                         <td>
