--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,11 @@
 
 
     <!-- Bootstrap core CSS -->
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
 
 
-  <title>Профессиональные Python &amp; Django  курсы</title>
+  <title>Профессиональные Python; Django  курсы</title>
     <![endif]-->
 </head>
 
@@ -30,15 +31,16 @@
         </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html">Main <span class="sr-only">(current)</span></a></li>
-              <li class="active"><a href="contact.html">Contacts <span class="sr-only">(current)</span></a></li>
+              <li class="active"><a href="index.html">Main<span class="sr-only"></span></a></li>
+              <li class="active"><a href="contact.html">Contacts<span class="sr-only"></span></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
+    <h1>Description PyBursa</h1>
     <div class="jumbotron">
       <div class="container">
-        <h1>Description PyBursa</h1>
+
       </div>
             <p> В этом курсе мы сместили акцент в сторону практики.
             Будет умеренное количество теории - максимум практики.
@@ -48,13 +50,18 @@
 
       <div class="panel panel-default">
         <div class="panel-body">
-            Запишись на курсы Python <br>
-            Попади в тренд современной <br>
-            WEB разработки <br>
+            <div class="list-group">
+              <a  class="list-group-item active">
+                <h4 class="list-group-item-heading">
+                    Запишись на курсы Python
+                    Попади в тренд современной
+                    WEB разработки</h4>
+              </a>
+            </div>
         </div>
         <div class="panel panel-default">
   <!-- Default panel contents -->
-          <div class="panel-heading"><h3>Программа:</h3></div>
+          <div class="panel-heading"><h3>Program:</h3></div>
             <table class="table">
                <tbody>
                     <tr>
