--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,156 +4,120 @@
     <meta charset="UTF-8">
     <title>Contacts page</title>
     <meta name="description" content="">
-	<meta name="keywords" content="">
+    <meta name="keywords" content="">
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
 
 </head>
 <body class="color-black">
 
-    <div class="site-wrapper">
+<div class="site-wrapper">
 
-      <div class="site-wrapper-inner">
+    <div class="site-wrapper-inner">
 
         <div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">PyBursa</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li><a href="index.html"> Main </a></li>
+            <div class="masthead clearfix">
+                <div class="inner">
+                    <h3 class="masthead-brand">PyBursa</h3>
+                    <nav>
+                        <ul class="nav masthead-nav">
+                            <li><a href="index.html"> Main </a></li>
 
-                  <li class="active"><a href="contact.html"> Contacts </a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <!-- Example row of columns -->
-              <div class="row">
-                  <div class="col-lg-4 col-md-4 col-sm-4">
-                      <h1>Director</h1>
-
-                      <div class="line"></div>
-                      <ul class="contact-info">
-                          <li>
-                              <dl>
-                                  <dt>Name</dt>
-                                  <dd>Frank Sinatra</dd>
-                              </dl>
-                          </li>
-                          <li>
-                               <dl>
-                                  <dt>Email</dt>
-                                  <dd><a href="">hello@domain.com</a></dd>
-                              </dl>
-                          </li>
-                          <li>
-                              <dl>
-                                  <dt>Phone</dt>
-                                  <dd>(900) 987 65 43, (900) 234 56 78</dd>
-                              </dl>
-                          </li>
-                          <li>
-                              <dl>
-                                  <dt>Skype</dt>
-                                  <dd>franky.sinatra</dd>
-                              </dl>
-                          </li>
-                      </ul>
-
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4">
-                      <h1>Manager</h1>
-
-                      <div class="line"></div>
-                      <ul class="contact-info">
-                          <li>
-                              <dl>
-                                  <dt>Name</dt>
-                                  <dd>Frank Sinatra</dd>
-                              </dl>
-                          </li>
-                          <li>
-                               <dl>
-                                  <dt>Email</dt>
-                                  <dd><a href="">hello@domain.com</a></dd>
-                              </dl>
-                          </li>
-                          <li>
-                              <dl>
-                                  <dt>Phone</dt>
-                                  <dd>(900) 987 65 43, (900) 234 56 78</dd>
-                              </dl>
-                          </li>
-                          <li>
-                              <dl>
-                                  <dt>Skype</dt>
-                                  <dd>franky.sinatra</dd>
-                              </dl>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4">
-                      <h1>Founder </h1>
-
-                      <div class="line"></div>
-                      <ul class="contact-info">
-                          <li>
-                              <dl>
-                                  <dt>Name</dt>
-                                  <dd>Frank Sinatra</dd>
-                              </dl>
-                          </li>
-                          <li>
-                               <dl>
-                                  <dt>Email</dt>
-                                  <dd><a href="">hello@domain.com</a></dd>
-                              </dl>
-                          </li>
-                          <li>
-                              <dl>
-                                  <dt>Phone</dt>
-                                  <dd>(900) 987 65 43, (900) 234 56 78</dd>
-                              </dl>
-                          </li>
-                          <li>
-                              <dl>
-                                  <dt>Skype</dt>
-                                  <dd>franky.sinatra</dd>
-                              </dl>
-                          </li>
-                      </ul>
-
-                  </div>
-              </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-    <div class="jumbotron alert-success">
-        <div class="row">
-            <div class="container">
-                <div class="divider">
-                    <h4>Этот блок существует на средства вырученые от продажи велика</h4>
+                            <li class="active"><a href="contact.html"> Contacts </a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
+
+            <div class="inner cover">
+                <!-- Example row of columns -->
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4">
+                        <h1 class="amber">Director</h1>
+
+                        <div class="line"></div>
+                        <ul class="contact-info">
+                            <li>
+                                Name: Frank Sinatra
+                            </li>
+                            <li>
+                                Email: <a href="">hello@domain.com</a>
+                            </li>
+                            <li>
+                                Phone: (900) 987 65 43, (900) 234 56 78
+                            </li>
+                            <li>
+                                Skype: franky.sinatra
+                            </li>
+                        </ul>
+
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4">
+                        <h1 class="deep-orange-darken-1">Manager</h1>
+
+                        <div class="line"></div>
+                        <ul class="contact-info">
+                            <li>
+                                Name: Frank Sinatra
+                            </li>
+                            <li>
+                                Email: <a href="">hello@domain.com</a>
+                            </li>
+                            <li>
+                                Phone: (900) 987 65 43, (900) 234 56 78
+                            </li>
+                            <li>
+                                Skype: franky.sinatra
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4">
+                        <h1 class="pink-darken-4">Founder </h1>
+
+                        <div class="line"></div>
+                        <ul class="contact-info">
+                            <li>
+                                Name: Frank Sinatra
+                            </li>
+                            <li>
+                                Email: <a href="">hello@domain.com</a>
+                            </li>
+                            <li>
+                                Phone: (900) 987 65 43, (900) 234 56 78
+                            </li>
+                            <li>
+                                Skype: franky.sinatra
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </div>
-    <div class="row">
-        <div class="inner">
-            <button class="btn btn-default" type="submit">Нажпи меня</button>
-            <input class="btn btn-default" type="button" value="Жми меня полностью">
-            <input class="btn btn-default" type="submit" value="Перейдем?">
-        </div>
+
     </div>
 
-    <!-- start scripts -->
+</div>
+<div class="jumbotron alert-success">
+    <div class="row">
+        <div class="container">
+            <div class="divider">
+                <h4>Этот блок существует на средства вырученые от продажи велика</h4>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="inner">
+        <button class="btn btn-default cyan" type="submit">Нажпи меня</button>
+        <input class="btn btn-default purple-lighten-3" type="button" value="Жми меня полностью">
+        <input class="btn btn-default green" type="submit" value="Перейдем?">
+    </div>
+</div>
+
+<!-- start scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../static/js/bootstrap.min.js"></script>
 <!--/ end scripts -->
